[#52] [#53] Dark mode & dev scripts fixes

--- a/fragments/tile-big.css
+++ b/fragments/tile-big.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  color: var(--color-contra);
+  color: var(--color-white);
 }
 
 .tile-big::before {
