--- a/fragments/title-big.css
+++ b/fragments/title-big.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  color: var(--color-contra);
+  color: var(--color-white);
 }
 
 .title-big::before {
