--- a/styles/footer.css
+++ b/styles/footer.css
@@ -19,7 +19,7 @@
 }
 
 .footer__logo {
-  width: 31px;
+  width: 62px;
   height: auto;
   display: block;
 }
